[package]
name = "ssergeev"
version = "0.1.0"
authors = ["Kirill Konevets <kkonevets@gmail.com>"]
edition = "2018"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "commit"
path = "src/commit_index.rs"

[[bin]]
name = "query"
path = "src/query.rs"

[[bin]]
name = "stem"
path = "src/stem.rs"

[[bin]]
name = "play"
path = "src/play.rs"

[dependencies]
tantivy = "^0.9"
tempdir = "0.3.7"
serde_json = "^1.0"
rust-stemmers = "1.1.0"
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.10.1"