[package]
name = "tsearch"
version = "0.1.0"
authors = ["Kirill Konevets <kkonevets@gmail.com>"]
edition = "2018"

[dependencies]
# tantivy = "^0.9" 
tempdir = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"
rust-stemmers = "1.1.0"
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.10.1"
actix-web = "0.7.19"
actix = "0.7.9"
failure = "0.1.5"
hyper = "0.12"
 
[dependencies.tantivy]
git = "https://github.com/tantivy-search/tantivy"
rev = "c23a7c9"